--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,10 +1,13 @@
 version: "3.9"
 
-services:
+networks:
+  appnet:
+    driver: bridge
 
+services:
   backend:
     build: ./back
-    container_name: backend_app
+    container_name: backend
     ports:
       - "3001:3001"
     volumes:
@@ -16,13 +19,10 @@ services:
 
   frontend:
     build: ./web
-    container_name: frontend_app
+    container_name: frontend
     ports:
       - "3000:80"
     depends_on:
       - backend
     networks:
       - appnet
-
-networks:
-  appnet:
